add preferred contact number to confirmation page

--- a/app/templates/order/_user_details.hbs
+++ b/app/templates/order/_user_details.hbs
@@ -16,6 +16,15 @@
 
   <div class="row info">
     <div class="small-4 columns">
+      {{t "order.confirm_booking.your_details.preferred_contact_number"}}
+    </div>
+    <div class="small-8 detail columns">
+      {{session.currentUser.preferredContactNumber}}
+    </div>
+  </div>
+
+  <div class="row info">
+    <div class="small-4 columns">
       {{t "order.confirm_booking.your_details.name"}}
     </div>
     <div class="small-8 detail columns">
