fix verified text displacement from center

--- a/app/styles/account_details.scss
+++ b/app/styles/account_details.scss
@@ -248,7 +248,7 @@
 .verified_icon{
   float: left !important;
   .verified_text {
-    margin: 5%;
+    margin-left: 5%;
     font-size: 0.8em;
   }
 }
