--- a/app/templates/orders/_order_tabs.hbs
+++ b/app/templates/orders/_order_tabs.hbs
@@ -23,19 +23,19 @@
 
 <div class="row tabs tab-name active-tab">
   {{#link-to 'orders.booking' order.id tagName="div" classNames="small-4 columns booking active-tab tab text-center"}}
-    {{#link-to 'orders.booking' order.id}}
+    {{#link-to 'orders.booking' order.id classNames="item-menu"}}
       Booking
     {{/link-to}}
   {{/link-to}}
 
   {{#link-to 'orders.goods' order.id tagName="div" classNames="small-4 goods tab active-tab columns text-center"}}
-    {{#link-to 'orders.goods' order.id}}
+    {{#link-to 'orders.goods' order.id classNames="item-menu"}}
       Goods
     {{/link-to}}
   {{/link-to}}
 
   {{#link-to 'orders.conversation' order.id tagName="div" classNames="small-4 messages active-tab tab columns text-center"}}
-    {{#link-to 'orders.conversation' order.id}}
+    {{#link-to 'orders.conversation' order.id classNames="item-menu"}}
       Messages
     {{/link-to}}
   {{/link-to}}
