--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -14,7 +14,7 @@
           {{/link-to}}
         </div>
         <div class="columns booking button-container small-5 large-6 medium-5">
-          {{book-appointment buttonStyle='light'}}
+          {{book-appointment buttonStyle='light' isMyOrdersRoute= isMyOrdersRoute}}
         </div>
       </div>
       <ul class="list list-items">
