change heading for my account page

--- a/app/templates/my_account.hbs
+++ b/app/templates/my_account.hbs
@@ -13,7 +13,7 @@
             <div class="mobile">
               <div class="row">
                 <div class="small-12 medium-12 large-12 columns section-title">
-                  {{t 'my_dashboard.account.account_details'}}
+                  {{t 'my_dashboard.account.your_details'}}
                 </div>
               </div>
               <div class="detail-row row">
