Fix missing translation error

--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -150,7 +150,7 @@
                       </div>
                       <div class="small-12 columns input-error">
                         <div class='input-error'>
-                          {{t 'login.mobile_warning'}}
+                          {{t 'order.client_information.mobile_warning'}}
                         </div>
                       </div>
                     </div>
