add goto top button

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,6 +27,7 @@
 @import "messages";
 @import "my_dashboard";
 @import "my_account";
+@import "static_pages";
 
 @import "templates/home";
 @import "templates/loading";
@@ -39,5 +40,6 @@
 @import "templates/schedule_details";
 @import "components/logo-banner";
 @import "components/add-request";
+@import "components/go_to_top_button";
 @import "components/select-appointment-date";
 @import "ember_offline";
