--- a/app/templates/privacy.hbs
+++ b/app/templates/privacy.hbs
@@ -1,6 +1,6 @@
 <h1 style="text-align:center"> {{t "pics.title"}} </h1>
 <div class="inner-wrap">
-  <section class="main-section faq_list">
+  <section class="main-section privacy faq_list">
     <div class="row">
       <div class="small-12 columns">
         <p>{{t "pics.confidentiality"}}</p>
