--- a/app/templates/terms.hbs
+++ b/app/templates/terms.hbs
@@ -1,6 +1,6 @@
 <h1 style="text-align:center"> {{t 'terms.title'}} </h1>
 <div class="inner-wrap">
-  <section class="main-section faq_list">
+  <section class="main-section terms faq_list">
     <div class="row">
       <div class="small-12 columns">
         <p>{{t "terms.info"}}</p>
