--- a/app/templates/privacy.hbs
+++ b/app/templates/privacy.hbs
@@ -1,4 +1,4 @@
-<h1 style="text-align:center"> {{t "pics.title"}} </h1>
+<h1 style="text-align:center" class="terms-title"> {{t "pics.title"}} </h1>
 <div class="inner-wrap">
   <section class="main-section privacy faq_list">
     <div class="row">
