comment out goto-top button for now

--- a/app/templates/privacy.hbs
+++ b/app/templates/privacy.hbs
@@ -1,55 +1,55 @@
-<h1 style="text-align:center" class="terms-title"> {{t "pics.title"}} </h1>
+<h1 style="text-align:center" class="terms-title"> {{t "privacy.title"}} </h1>
 <div class="inner-wrap">
   <section class="main-section privacy faq_list">
     <div class="row">
       <div class="small-12 columns">
-        <p>{{t "pics.confidentiality"}}</p>
+        <p>{{t "privacy.confidentiality"}}</p>
         <p>
-          {{t "pics.ask_to_access"}}
+          {{t "privacy.ask_to_access"}}
           <a target="blank" href = "https://www.crossroads.org.hk/home/contact/privacy/">
-            {{t "pics.here"}}.
+            {{t "privacy.here"}}.
           </a>
         </p>
-        <p>{{t "pics.change_privacy_policy"}}</p>
-        <p>{{t "pics.child"}}</p>
-        <p><b>{{t "pics.commitement_to_you"}}</b></p>
+        <p>{{t "privacy.change_privacy_policy"}}</p>
+        <p>{{t "privacy.child"}}</p>
+        <p><b>{{t "privacy.commitement_to_you"}}</b></p>
         <ul>
-          <li>{{t "pics.use_purposely"}}</li>
-          <li>{{t "pics.will_not_sell_dara"}}</li>
-          <li>{{t "pics.unsubscribe"}}</li>
-          <li>{{t "pics.questions"}}</li>
+          <li>{{t "privacy.use_purposely"}}</li>
+          <li>{{t "privacy.will_not_sell_dara"}}</li>
+          <li>{{t "privacy.unsubscribe"}}</li>
+          <li>{{t "privacy.questions"}}</li>
         </ul>
-        <p><b>{{t "pics.personal_data_collected"}}</b></p>
-        <p>{{t "pics.provide_data_to_use_services"}}</p>
+        <p><b>{{t "privacy.personal_data_collected"}}</b></p>
+        <p>{{t "privacy.provide_data_to_use_services"}}</p>
         <ul>
-          <li>{{t "pics.contact_details"}}</li>
-          <li>{{t "pics.gender_and_dob"}}</li>
-          <li>{{t "pics.financial_information"}}</li>
-          <li>{{t "pics.personal_identifier"}}</li>
-          <li>{{t "pics.responses_to_feedback"}}</li>
+          <li>{{t "privacy.contact_details"}}</li>
+          <li>{{t "privacy.gender_and_dob"}}</li>
+          <li>{{t "privacy.financial_information"}}</li>
+          <li>{{t "privacy.personal_identifier"}}</li>
+          <li>{{t "privacy.responses_to_feedback"}}</li>
         </ul>
-        <p><b>{{t "pics.purpose_and_use"}}</b></p>
-        <p>{{t "pics.will_use_data_for_following"}}</p>
+        <p><b>{{t "privacy.purpose_and_use"}}</b></p>
+        <p>{{t "privacy.will_use_data_for_following"}}</p>
         <ul>
-          <li>{{t "pics.new_or_any_invitation"}}</li>
-          <li>{{t "pics.respond_to_your_questions"}}</li>
-          <li>{{t "pics.to_process_feedback"}}</li>
-          <li>{{t "pics.requested_by_govt_or_legal_claim"}}</li>
-          <li>{{t "pics.deliver_items_to_you"}}</li>
-          <li>{{t "pics.improve_services"}}</li>
-          <li>{{t "pics.prevent_crime"}}</li>
+          <li>{{t "privacy.new_or_any_invitation"}}</li>
+          <li>{{t "privacy.respond_to_your_questions"}}</li>
+          <li>{{t "privacy.to_process_feedback"}}</li>
+          <li>{{t "privacy.requested_by_govt_or_legal_claim"}}</li>
+          <li>{{t "privacy.deliver_items_to_you"}}</li>
+          <li>{{t "privacy.improve_services"}}</li>
+          <li>{{t "privacy.prevent_crime"}}</li>
         </ul>
-        <p><b>{{t "pics.third_parties"}}</b></p>
-        <p>{{t "pics.third_party_organisations"}}</p>
-        <p>{{t "pics.social_welfare_dept"}}</p>
-        <p><b>{{t "pics.crossroads_network"}}</b></p>
-        <p>{{t "pics.use_data_in_crossroads_network"}}</p>
-        <p><b>{{t "pics.correction_of_data"}}</b></p>
-        <p>{{t "pics.right_to_review_and_correct"}}</p>
-        <p>{{t "pics.last_updated"}}</p>
+        <p><b>{{t "privacy.third_parties"}}</b></p>
+        <p>{{t "privacy.third_party_organisations"}}</p>
+        <p>{{t "privacy.social_welfare_dept"}}</p>
+        <p><b>{{t "privacy.crossroads_network"}}</b></p>
+        <p>{{t "privacy.use_data_in_crossroads_network"}}</p>
+        <p><b>{{t "privacy.correction_of_data"}}</b></p>
+        <p>{{t "privacy.right_to_review_and_correct"}}</p>
+        <p>{{t "privacy.last_updated"}}</p>
       </div>
     </div>
-    {{go-to-top-button}}
+    {{!-- {{go-to-top-button}} --}}
   </section>
   {{#if isMobileApp}}
     <a class="exit-off-canvas modify-off-canvas"></a>
