add about and faq pages as well

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -28,6 +28,7 @@
 @import "my_dashboard";
 @import "my_account";
 @import "static_pages";
+@import "about";
 
 @import "templates/home";
 @import "templates/loading";
