--- a/app/styles/_static_pages.scss
+++ b/app/styles/_static_pages.scss
@@ -1,4 +1,4 @@
-.terms-title, .privacy-title{
+.static_page_title {
   @media #{$small-only} {
    display: none;
  }
@@ -25,5 +25,16 @@
 
   p b {
     color: $white;
+  }
+  .question_list {
+    margin-left: 0.5rem;
+
+    li {
+      list-style: none;
+
+      a {
+        text-decoration: underline;
+      }
+    }
   }
 }
