--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,1 +1,73 @@
-<h1 style="text-align:center"> About </h1>
+<h1 style="text-align:center" class="static_page_title"> {{t 'about.title'}} </h1>
+
+<!-- How to -->
+<div class="about_page" id="how_to">
+  <!-- Scroll button disabled until it's spec'd out -->
+  <!--
+          {{#scroll-to href='#how_to'}}
+              <div class="button scroll-down"><i class="fa fa-lg fa-angle-double-down"></i></div>
+          {{/scroll-to}}
+      -->
+
+  <div class="section_title"> {{ t "about.user_guide_title" }} </div>
+
+  <div class="row">
+    <!-- How to browse -->
+    <div class="columns large-6">
+      <div class="section_text small">
+        <div class="section_subtitle"> {{ t "about.order_goods.title" }} </div>
+        <div class="step"> 1) {{ t "about.order_goods.step_1.desc" }} </div>
+        <div class="step"> 2) {{ t "about.order_goods.step_2.desc" }} </div>
+        <div class="step">
+          <div> 3) {{ t "about.order_goods.step_3.desc" }} </div>
+          {{#each (range 1 4) as |num|}}
+          <div class="bullet"> - {{ t (concat "about.order_goods.step_3.bullet_" num )}} </div>
+          {{/each}}
+        </div>
+        <div class="step">
+          <div> 4) {{ t "about.order_goods.step_4.desc" }} </div>
+          {{#each (range 1 3) as |num|}}
+          <div class="bullet"> - {{ t (concat "about.order_goods.step_4.bullet_" num )}} </div>
+          {{/each}}
+        </div>
+      </div>
+      <div class="section_text small">
+        <div>{{ t "about.transport_options" }} </div>
+        <div class="step transport_option">a) {{ t "about.collection_transport_description" }} </div>
+        <div class="step transport_option">b) {{ t "about.van_transport_description" }} <br> {{ t
+              "about.van_transport_note" }} </div>
+      </div>
+      <div>
+        <div class="small">{{ t "about.tap_button" }}</div>
+        {{#link-to "browse"}}
+        <div class="button small action">
+          {{ t "about.order_goods.action" }} <i class="fa fa-shopping-cart"></i>
+        </div>
+        {{/link-to}}
+      </div>
+    </div>
+
+    <!-- How to visit -->
+    <div class="columns large-6">
+      <div class="section_text small">
+        <div class="section_subtitle"> {{ t "about.visit.title" }} </div>
+        <div class="step light"> {{ t "about.visit.guide_intro" }} </div>
+        <div class="step light">
+          {{#each (range 1 4) as |num|}}
+          <div> {{ num }}) {{ t (concat "about.visit.guide_step_" num )}} </div>
+          {{/each}}
+        </div>
+        <div class="step light"> {{ t "about.visit.onsite_guide_intro" }} </div>
+        <div class="step light">
+          {{#each (range 1 3) as |num|}}
+          <div> {{ num }}) {{ t (concat "about.visit.onsite_guide_step_" num )}} </div>
+          {{/each}}
+        </div>
+      </div>
+      <div>
+        <div class="small">{{ t "about.tap_button" }}</div>
+        {{book-appointment}}
+      </div>
+    </div>
+  </div>
+</div>
