--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -4,37 +4,47 @@
 
 <div class="home_page {{if showCartDetailSidebar "shift_left" "" }}">
   <div class="scroller">
-
-    <!-- Introduction -->
-    <div class="row home_section small light">
-      {{ t "home.introduction" }}
-      {{#link-to "faq"}}
-        {{ t "home.faq_text" }}
-      {{/link-to}}
-    </div>
-
-    <div class="row button_container">
-      <!-- Browse button -->
-      <div class="columns home_section large-6">
-        <div class="section_title"> {{ t "home.order_goods.title" }} </div>
-        <div class="section_subtitle small"> <i class="fa fa-check"></i> {{ t "home.order_goods.subtitle" }} {{#link-to "about"}}Learn More{{/link-to}} </div>
-        {{#link-to "browse"}}
-          <div class="button small action">
-            {{ t "home.order_goods.action" }} <i class="fa fa-shopping-cart"></i>
-          </div>
+    <div>
+      <video type="video/webm;codecs='vp8, vorbis'" class="show-for-large-up" id="video-background" preload="auto" preload
+        autoplay loop muted>
+        <source src="/assets/media/preview.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
+        <source src="/assets/media/preview.webm" type="video/webm; codecs=vp8,vorbis">
+      </video>
+      <div class="show-for-large-up" id="image-credit" lang="zh-hant"></div>
+      <div class="show-for-large-up" id="video-overlay"></div>
+      <!-- Introduction -->
+      <div class="row home_section small light">
+        {{ t "home.introduction" }}
+        {{#link-to "faq"}}
+          {{ t "home.faq_text" }}
         {{/link-to}}
       </div>
-
-      <!-- Visit button -->
-      <div class="columns home_section large-6">
-        <div class="section_title"> {{ t "home.visit.title" }} </div>
-        <div class="section_subtitle small">
-          <div><i class="fa fa-check"></i> {{ t "home.visit.subtitle" }} {{#link-to "about"}}Learn More{{/link-to}} </div>
-        </div>
-        {{book-appointment}}
+      <div class="intro-text">
+        <h1>GoodCity<em>.HK</em><br><em class="chinese" lang="zh-hant">好人好市</em></h1>
       </div>
+      <div class="row button_container">
+        <!-- Browse button -->
+        <div class="columns home_section large-6">
+          <div class="section_title"> {{ t "home.order_goods.title" }} </div>
+          <div class="section_subtitle small"> <i class="fa fa-check"></i> {{ t "home.order_goods.subtitle" }} {{#link-to "about"}}Learn More{{/link-to}} </div>
+          {{#link-to "browse"}}
+            <div class="button small action">
+              {{ t "home.order_goods.action" }} <i class="fa fa-shopping-cart"></i>
+            </div>
+          {{/link-to}}
+        </div>
+
+        <!-- Visit button -->
+        <div class="columns home_section large-6">
+          <div class="section_title"> {{ t "home.visit.title" }} </div>
+          <div class="section_subtitle small">
+            <div><i class="fa fa-check"></i> {{ t "home.visit.subtitle" }} {{#link-to "about"}}Learn More{{/link-to}} </div>
+          </div>
+          {{book-appointment}}
+        </div>
+      </div>
+    {{ logo-banner device="desktop" }}
+    {{ logo-banner device="mobile" }}
     </div>
-  {{ logo-banner device="desktop" }}
-  {{ logo-banner device="mobile" }}
   </div>
 </div>
