--- a/app/styles/components/_logo-banner.scss
+++ b/app/styles/components/_logo-banner.scss
@@ -1,7 +1,8 @@
 .goodcity-logo-banner {
-
   width: 100%;
   display: none;
+  z-index: 3;
+  position: absolute;
 
   @media #{$medium-up} {
     &.desktop {
