--- a/app/templates/faq.hbs
+++ b/app/templates/faq.hbs
@@ -83,7 +83,7 @@
 
   </div>
 </div>
-{{!-- {{go-to-top-button}} --}}
+{{go-to-top-button}}
 {{#if isMobileApp}}
   <a class="exit-off-canvas modify-off-canvas"></a>
 {{/if}}
