--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -20,7 +20,7 @@
         {{/link-to}}
       </div>
       <div class="intro-text">
-        <h1>GoodCity<em>.HK</em><br><em class="chinese" lang="zh-hant">好人好市</em></h1>
+        <h1>GoodCity For Charities<br><em class="chinese" lang="zh-hant">好人好巿 (慈善組織)</em></h1>
       </div>
       <div class="row button_container">
         <!-- Browse button -->
@@ -29,7 +29,7 @@
           <div class="section_subtitle small"> <i class="fa fa-check"></i> {{ t "home.order_goods.subtitle" }} {{#link-to "about"}}Learn More{{/link-to}} </div>
           {{#link-to "browse"}}
             <div class="button small action">
-              {{ t "home.order_goods.action" }} <i class="fa fa-shopping-cart"></i>
+              <i class="fa fa-shopping-cart"></i> {{ t "home.order_goods.action" }}
             </div>
           {{/link-to}}
         </div>
