--- a/app/templates/terms.hbs
+++ b/app/templates/terms.hbs
@@ -69,7 +69,7 @@
 
       </div>
     </div>
-    {{!-- {{go-to-top-button}} --}}
+    {{go-to-top-button}}
   </section>
   {{#if isMobileApp}}
     <a class="exit-off-canvas modify-off-canvas"></a>
