--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,14 +1,5 @@
 <h1 style="text-align:center" class="static_page_title"> {{t 'about.title'}} </h1>
-
-<!-- How to -->
 <div class="about_page" id="how_to">
-  <!-- Scroll button disabled until it's spec'd out -->
-  <!--
-          {{#scroll-to href='#how_to'}}
-              <div class="button scroll-down"><i class="fa fa-lg fa-angle-double-down"></i></div>
-          {{/scroll-to}}
-      -->
-
   <div class="section_title"> {{ t "about.user_guide_title" }} </div>
 
   <div class="row">
@@ -41,7 +32,7 @@
         <div class="small">{{ t "about.tap_button" }}</div>
         {{#link-to "browse"}}
         <div class="button small action">
-          {{ t "about.order_goods.action" }} <i class="fa fa-shopping-cart"></i>
+          <i class="fa fa-shopping-cart"></i> {{ t "about.order_goods.action" }}
         </div>
         {{/link-to}}
       </div>
