--- a/app/templates/privacy.hbs
+++ b/app/templates/privacy.hbs
@@ -49,7 +49,7 @@
         <p>{{t "privacy.last_updated"}}</p>
       </div>
     </div>
-    {{!-- {{go-to-top-button}} --}}
+    {{go-to-top-button}}
   </section>
   {{#if isMobileApp}}
     <a class="exit-off-canvas modify-off-canvas"></a>
