--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -111,7 +111,7 @@
                         <div class="small-3 columns verified_icon">
                           <span>
                             {{fa-icon "check-circle-o"}}
-                            <span class="verified_text">verified</span>
+                            <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
                           </span>
                         </div>
                         {{/if}}
@@ -140,7 +140,7 @@
                       <div class="small-3 columns verified_icon">
                         <span>
                           {{fa-icon "check-circle-o"}}
-                          <span class="verified_text">verified</span>
+                          <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
                         </span>
                       </div>
                       {{/if}}
