--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -20,13 +20,13 @@
               {{ t "home.faq_text" }}
             {{/link-to}}
           </div>
-          {{#unless isMobileApp}}
+          {{#if hasCartItems}}
             <div class="cart-icon small-1 columns">
               {{#link-to "cart"}}
                 {{partial 'cart_truck_icon'}}
               {{/link-to}}
             </div>
-          {{/unless}}
+          {{/if}}
         </div>
         <div class="intro-text">
           <h1>GoodCity For Charities<br><em class="chinese" lang="zh-hant">好人好巿 (慈善組織)</em></h1>
@@ -35,7 +35,7 @@
           <!-- Browse button -->
           <div class="columns home_section large-6">
             <div class="section_title"> {{ t "home.order_goods.title" }} </div>
-            <div class="section_subtitle small"> <i class="fa fa-check"></i> {{ t "home.order_goods.subtitle" }} {{#link-to "about"}}Learn More{{/link-to}} </div>
+            <div class="section_subtitle small"> <i class="fa fa-check"></i> {{ t "home.order_goods.subtitle" }} {{#link-to "about"}}{{t 'home.learn_more'}}{{/link-to}} </div>
             {{#link-to "browse"}}
               <div class="button small action">
                 <i class="fa fa-shopping-cart"></i> {{ t "home.order_goods.action" }}
@@ -47,7 +47,7 @@
           <div class="columns home_section large-6">
             <div class="section_title"> {{ t "home.visit.title" }} </div>
             <div class="section_subtitle small">
-              <div><i class="fa fa-check"></i> {{ t "home.visit.subtitle" }} {{#link-to "about"}}Learn More{{/link-to}} </div>
+              <div><i class="fa fa-check"></i> {{ t "home.visit.subtitle" }} {{#link-to "about"}}{{t 'home.learn_more'}}{{/link-to}} </div>
             </div>
             {{book-appointment}}
           </div>
