--- a/app/styles/templates/_login.scss
+++ b/app/styles/templates/_login.scss
@@ -4,6 +4,11 @@
   }
 }
 
+.sent_code_to{
+  margin-left: 0.5em;
+  font-weight: bold;
+}
+
 .warning_empty {
   padding-left: 1rem !important;
   padding-top: .4rem !important;
