--- a/app/templates/authenticate.hbs
+++ b/app/templates/authenticate.hbs
@@ -18,7 +18,7 @@
             <div class="row">
               <div class="small-12 columns">
                 <label class="form-label">{{t "_verification_pin.input_code"}}</label>
-                <label class="form-label">{{t "_verification_pin.send_code"}}</label>
+                <label class="form-label">{{t "_verification_pin.send_code"}} <span class="sent_code_to">{{loginParam}}</span></label>
               </div>
             </div>
 
