fix post email input screen

--- a/app/styles/templates/_home.scss
+++ b/app/styles/templates/_home.scss
@@ -64,7 +64,7 @@
     min-width: 100%;
     min-height: 100%;
     @media #{$large-only} {
-      width: auto;
+      width: 120%;
       height: auto;
     }
 
