fix blank target

--- a/app/templates/faq.hbs
+++ b/app/templates/faq.hbs
@@ -70,7 +70,7 @@
 
     <p>
       {{t "faq.answers.answer6"}}
-      <a target="blank" href="http://www.globalhand.org/">
+      <a target="_blank" href="http://www.globalhand.org/">
         {{t "faq.answers.global_hand"}}
       </a>
     </p>
