--- a/app/templates/privacy.hbs
+++ b/app/templates/privacy.hbs
@@ -6,7 +6,7 @@
         <p>{{t "privacy.confidentiality"}}</p>
         <p>
           {{t "privacy.ask_to_access"}}
-          <a target="blank" href = "https://www.crossroads.org.hk/home/contact/privacy/">
+          <a target="_blank" href = "https://www.crossroads.org.hk/home/contact/privacy/">
             {{t "privacy.here"}}.
           </a>
         </p>
