--- a/app/templates/terms.hbs
+++ b/app/templates/terms.hbs
@@ -26,7 +26,7 @@
         <p><b>{{t "terms.privacy.title"}}</b></p>
         <p>{{t "terms.privacy.info"}} {{t "terms.privacy.pics"}} {{link-to (t "terms.privacy.here") "privacy"}}.
           {{t "terms.privacy.privacy_link"}}
-          <a target="blank" href = "https://www.crossroads.org.hk/home/contact/privacy/">
+          <a target="_blank" href = "https://www.crossroads.org.hk/home/contact/privacy/">
             {{t "terms.privacy.here"}}.
           </a>
 
