--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -4,13 +4,8 @@
 
 <div class="home_page">
   <div class="scroller">
-    <video type="video/webm;codecs='vp8, vorbis'" class="show-for-large-up" id="video-background" preload="auto" preload
-      autoplay loop muted>
-      <source src="/assets/media/preview.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
-      <source src="/assets/media/preview.webm" type="video/webm; codecs=vp8,vorbis">
-    </video>
-    <div class="show-for-large-up" id="image-credit" lang="zh-hant"></div>
-    <div class="show-for-large-up" id="video-overlay"></div>
+    <img src="/assets/images/gc_homepage.jpg" id="image-background" class="show-for-large-up" />
+    <div class="show-for-large-up" id="image-overlay"></div>
     <!-- Introduction -->
     <div class="content">
         <div class="row home_section small light">
