--- a/app/styles/templates/_home.scss
+++ b/app/styles/templates/_home.scss
@@ -5,20 +5,40 @@
     }
   }
   .cart-icon{
+    text-align: left;
     @media #{$small-only} {
       display: none;
+    }
+    .fa {
+      @media #{$medium-only} {
+        float: right;
+        margin-right: 12%;
+      }
+      @media #{$large-only} {
+        margin-left: 27%;
+      }
+      @media #{$xlarge-only} {
+        float: right;
+        margin-right: 40%;
+      }
+      @media #{$xxlarge-only} {
+        float: right;
+        margin-right: 10%;
+      }
     }
   }
   .cart {
     &.unread {
       position: absolute;
       @media #{$large-only} {
-        right: 20%;
+        right: 50%;
+      }
+      @media #{$xlarge-only} {
+        right: 35%;
       }
       @media #{$medium-only} {
         right: 2%;
       }
-
       .unread_length {
         line-height: 1.3rem;
         width: 1.2rem;
