--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -11,14 +11,14 @@
     <!-- Introduction -->
     <div class="content">
       <div class="row home_section small light">
-        <div class="small-10 columns introduction">
+        <div class="small-12 large-10 medium-10 columns introduction">
           {{ t "home.introduction" }}
           {{#link-to "faq"}}
             {{ t "home.faq_text" }}
           {{/link-to}}
         </div>
         {{#if hasCartItems}}
-          <div class="cart-icon small-2 columns">
+          <div class="cart-icon large-2 medium-2 columns">
             {{#link-to "cart"}}
               {{partial 'cart_truck_icon'}}
             {{/link-to}}
