change bg image

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -5,8 +5,8 @@
 <div class="home_page">
   <div class="scroller">
     <div class="show-for-large-up">
-      {{!-- <img src="/assets/images/gc_homepage.jpg" id="image-background" /> --}}
-      {{!-- <div id="image-overlay"></div> --}}
+      <img src="/assets/images/home-bg.jpg" id="image-background" />
+      <div id="image-overlay"></div>
     </div>
     <!-- Introduction -->
     <div class="content">
