--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -4,7 +4,7 @@
 
 <div class="home_page">
   <div class="scroller">
-    <div class="show-for-large-up">
+    <div class="show-for-medium-up">
       <img src="/assets/images/home-bg.jpg" id="image-background" />
       <div id="image-overlay"></div>
     </div>
