add margin for sidebar

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,6 +8,7 @@
       iconUrl = bannerImage
       title = appTitle
       description = 'Crossroads'
+      onclose=(action 'moveSidebarUp')
     }}
   </div>
 {{/if}}
